--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@mui/material": "^5.8.3",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-timer-hook": "^3.0.5"
   },
   "devDependencies": {
     "@types/node": "17.0.41",
