--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6",
     "typescript": "4.7.3"
+  },
+  "volta": {
+    "node": "16.15.1"
   }
 }
