--- a/package.json
+++ b/package.json
@@ -27,8 +27,12 @@
     "@types/node": "17.0.41",
     "@types/react": "18.0.12",
     "@types/react-dom": "18.0.5",
+    "@types/testing-library__jest-dom": "^5.14.3",
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6",
+    "eslint-plugin-jest": "^26.5.3",
+    "eslint-plugin-jest-dom": "^4.0.2",
+    "eslint-plugin-testing-library": "^5.5.1",
     "jest": "^28.1.1",
     "jest-environment-jsdom": "^28.1.1",
     "prettier": "^2.6.2",
