test(e2e): install playwright

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "format": "prettier --write './src/**/*.{js,jsx,ts,tsx,json}'",
     "lint": "next lint",
     "test": "jest --watch",
-    "test:ci": "jest"
+    "test:ci": "jest",
+    "test:e2e": "playwright test __tests__/e2e/"
   },
   "dependencies": {
     "@emotion/react": "^11.9.0",
@@ -23,6 +24,7 @@
     "react-timer-hook": "^3.0.5"
   },
   "devDependencies": {
+    "@playwright/test": "^1.22.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@types/jest": "^28.1.1",
